<resources>
    <string name="app_name">ProjetoBolsa</string>
    <string name="action_settings">Settings</string>

    <string name="txt_apostila">Apostilas</string>
    <string name="txt_tarefas">Tarefas</string>
    <string name="txt_info_apostila">Cadastre suas apostilas</string>
    <string name="txt_info_tareas">Cadastre suas tarefas</string>
    <string name="btn_abrir">Abrir</string>
    <string name="btn_prosseguir">Prosseguir</string>

    <string name="rdb_medio">Ensino médio</string>
    <string name="rdb_superior">Ensino superior</string>

    <string name="txt_email">Email:</string>
    <string name="txt_senha">Senha:</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="menu_sair">Sair</string>
    <string name="txt_nome">Informe seu nome:</string>

    <string name="txt_login">Login:</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_abrecadastro">Abrir Cadastro</string>
    <string name="txt_esqueceusuasenha">Esqueci Senha</string>
    <string name="title_activity_apostilas">Apostilas</string>
    <string name="title_activity_principal_materiais">PrincipalMateriais</string>
    <string name="nav_questionario">Questionários</string>
    <string name="nav_questionarios_recebidos">Recebidos</string>
    <string name="nav_apostilas">Apostilas</string>
    <string name="btn_proximo">Próximo ></string>
    <string name="btn_publicar">Publicar</string>
    <string name="txt_tema_apostila">Informe o assunto dessa apostila:</string>
    <string name="txt_resposta">Resposta:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_anterior"><![CDATA[< Anterior]]></string>
    <string name="title_activity_principal_materiais_aluno">PrincipalMateriaisAluno</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
