<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroProf">

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F06B6B70" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F06B6B70" />

    <TextView
        android:id="@+id/txtEmailAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email" />

    <EditText
        android:id="@+id/edtEmailAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtSenhaAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_senha" />

    <EditText
        android:id="@+id/edtSenhaAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F06B6B70" />

    <Spinner
        android:id="@+id/spnTurmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F06B6B70" />

    <Button
        android:id="@+id/btnGravarAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar" />

</LinearLayout>