<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarQuestionario">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F06B6B70"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txtTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_tema_apostila"
        android:textColor="#020000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <EditText
        android:id="@+id/edtTema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTema" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F06B6B70"
        app:layout_constraintTop_toBottomOf="@+id/edtTema"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txtQuestao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="#140000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <Button
        android:id="@+id/btnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#000000"
        android:text="@string/btn_anterior"
        android:textColor="#F7EA08"
        app:layout_constraintEnd_toStartOf="@+id/btnProximo"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQuestao" />

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="#000000"
        android:text="@string/btn_proximo"
        android:textColor="#F7EA08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQuestao" />

    <Button
        android:id="@+id/btnPublicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#000000"
        android:text="@string/btn_publicar"
        android:textColor="#F7EA08"
        app:layout_constraintEnd_toEndOf="@+id/btnProximo"
        app:layout_constraintStart_toStartOf="@+id/btnAnterior"
        app:layout_constraintTop_toBottomOf="@+id/btnAnterior" />

    <EditText
        android:id="@+id/edtQuestao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestao" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>